# IsolveVideoOcrApplication

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  monochromedialog.cpp  monochromedialog.h  ocrdialog.cpp  ocrdialog.h
